--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -1,12 +1,20 @@
-﻿<Window x:Class="WpfApp2.MainWindow"
+﻿<Window x:Class="WPFStitcher.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="WPF Stitcher" 
+        Height="450" 
+        Width="800"
+        WindowStartupLocation="CenterScreen">
+    <Grid x:Name="LayoutRoot">
+        <Button x:Name="PackagePick_Button" Content="Choose .zip file..." Click="PackagePick_Button_Click" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="110"/>
+        <TextBlock x:Name="PackagePick_TextBlock" HorizontalAlignment="Left" Margin="125,10,0,0" TextWrapping="Wrap" Text="No package chosen" VerticalAlignment="Top" Height="20"/>
+        <ScrollViewer x:Name="StitchResult_ScrollViewer" HorizontalAlignment="Left" Height="384" Margin="0,35,0,0" VerticalAlignment="Top" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible" Width="{Binding ActualWidth, ElementName=LayoutRoot}">
+            <Image x:Name="StitchedImage" Height="Auto" Width="Auto"/>
+        </ScrollViewer>
+        <Button x:Name="Stitch_Button" IsEnabled="False" Content="Stitch" HorizontalAlignment="Left" Margin="707,10,0,0" VerticalAlignment="Top" Width="75" Click="Stitch_Button_Click"/>
     </Grid>
 </Window>
